# multimodal-registration

./: .dockerignore  .gitmodules  Dockerfile  README.md  build.sh  run.sh
autorun/: fullpath.py  gradientTestsSynth.py  runners.py  runs.txt
cpp/: CMakeLists.txt  main.cpp
cpp/logger/: CMakeLists.txt  README.md
cpp/logger/examples/: example_callback.cpp  example_hierarchy.cpp  example_references.cpp  example_trivial.cpp
cpp/logger/multiexample/: file1.cpp  file1.hpp  main.cpp
cpp/logger/src/: SimppleLogger.cpp  SimppleLogger.hpp
cpp/tools/: .narrowBands.cpp.swo  canny.cpp  evalDetection.cpp  featureMatching-multimodal-eval.cpp  featureMatching-multimodal.cpp  flatten_cloud.cpp  gradientEdgePointCloud-multiKcolor.cpp  hystheresisThresholding.cpp  image2cloud.cpp  noise.cpp  pcdViewer.cpp  removenan.cpp
cpp/utils/: CMakeLists.txt
cpp/utils/include/: edges.h
cpp/utils/include/impl/: .edges.hpp.swp  edges.hpp
